fix: fixing member card positioning on mobile, laptop and ipad views

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,84 @@
+body {
+    margin: 0, auto;
+}
 .card {
     transition: 0.3s;
 }
 
 .card:hover {
     transform: scale(1.05);
+}
+
+
+.member-section img {
+    height: 5rem; 
+    width: 5rem; 
+    border-radius:100%
+}
+
+.member-section {
+    border: 2px solid #cfa229; 
+    margin: 10px 0px;
+    padding: 10px;
+    border-radius: .5rem;
+}
+
+
+.statImg {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.stat-card {
+    padding: 15px;
+    border-radius: 10px;
+    
+    flex-direction: column;
+    color: black;
+}
+
+
+.pink { background:#f5d0d2; }
+.green { background:#d8e8a9; }
+.yellow { background:#f0dab1; }
+.blue { background:#f5d0d2; }
+
+.main-card {
+    background-color: #363636;
+    color: white;
+    margin: 16px;
+    border-radius: 1rem;
+    padding: 2px 10px;
+}
+
+@media (min-width: 768px){
+    .main-card{
+        padding:20px;
+        font-size:18px;
+        margin: 20px;
+    }
+
+    .stat-card {
+        display: flex;
+    }
+
+    .stat-card div {
+        border: 2px solid red;
+        display: flex;
+        align-items: center;
+    }
+
+    .member-section img {
+        height: 10rem; 
+        width: 10rem; 
+    }
+    .member-section {
+        border: 2px solid #cfa229; 
+        margin: 0px;
+        padding: 16px;
+        border-radius: .5rem;
+        font-size: 24px;
+    }
+
 }
